# rhino-magic

./: README.md  cyclone  pyproject.toml  requirements.txt  setup.py  test.py  work_dirs
configs/base/: train_base.yaml  train_base_ar.yaml  train_base_ddim.yaml  train_base_gan.yaml  train_base_gen.yaml  train_base_restoration.yaml  train_base_sr3.yaml
configs/conditioned_generation/: train_cldm_64.yaml
configs/generation/: train_ddim_256.yaml  train_ddim_ffhq_256.yaml  train_ldm_256.yaml  train_ldm_ffhq_256.yaml  train_vae_adversarial_256.yaml  (+1 more)
evaluate_scripts/: eval_dps_ddim.py
jupyter_notebooks/: vae_vs_opt.ipynb
readmes/: config-design.md  what-is-boat.md
rhino_magic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
run_scripts/: train_adversarial_vae.py  train_cyclegan.py  train_dcgan.py  train_dcgan_gp.py  train_ddim.py  train_dit_dinov2.py  train_hat.py  train_hat_cyclone.py  train_hat_cyclone_wt.py  train_ldm.py  train_pggan.py  train_pix2pix.py  train_pix2pix_restoration.py  train_pixelcnn.py  train_pixelcnnpp.py  train_pixelcnnppmm_32.py  train_pixelsnail.py  train_sr3_ldm.py  train_stylegan2.py  train_vlae.py  train_vq.py  train_vqvae.py
train_scripts/: train_adversarial_vae.py  train_cldm.py  train_ddim.py  train_hat.py  train_ldm.py  train_sr3_ddim.py  train_sr3_ldm.py
trainer/: ddp_trainer.bk  ddp_trainer.py  multigpu_trainer.py  rhino_ddp_train.py  rhino_train.py  simple_trainer.bk  simple_trainer.py
utils/: check_compression_tolerance.py  cvt_state_to_pretrained.py  get_dinov2_features.py  pca_dinov2.py  pickle_to_npz.py
(+290 files in other folders)
